--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="cat">
             <div class="face">
                 <div class="ear-l">
-                    <div class="inner-232l"></div>
+                    <div class="inner-l"></div>
                 </div>
                 <div class="ear-r">
                     <div class="inner-r"></div>
